<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_bg"
        app:contentPadding="20dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/task_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="250dp"
                android:maxHeight="80dp"
                android:text="@string/task_title"
                android:textSize="22sp"
                android:fontFamily="@font/bitter_extra_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/task_reporter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="250dp"
                android:maxHeight="80dp"
                android:text="@string/reporter"
                android:textSize="17sp"
                android:fontFamily="@font/bitter_regular"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/task_title" />

            <TextView
                android:id="@+id/task_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/task_reporter" />

            <View
                android:id="@+id/icon_check"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/ic_check_filled"
                app:layout_constraintBottom_toBottomOf="@+id/task_time"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/task_title" />

            <TextView
                android:id="@+id/task_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="121dp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/task_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/bitter_regular"
                android:maxWidth="250dp"
                android:maxHeight="80dp"
                android:text="@string/task_description"
                android:textSize="16sp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/task_time" />

            <TextView
                android:id="@+id/member2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bitter_regular"
                android:maxWidth="250dp"
                android:maxHeight="80dp"
                android:text="@string/participant"
                android:textSize="12sp"
                android:visibility="gone"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/task_description" />

            <TextView
                android:id="@+id/verified_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bitter_regular"
                android:maxWidth="250dp"
                android:maxHeight="80dp"
                android:text="@string/division"
                android:textSize="12sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/icon_check" />

            <View
                android:id="@+id/view_listener"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginRight="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/icon_check"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>